# code-challenge-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/: CODEOWNERS  README.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  deploy.yml  performance.yml  release-containers.yml  security.yml
core_django/: __init__.py  manage.py  setup.py
core_django/core/: __init__.py  settings.py  urls.py
core_django/models/: __init__.py  apps.py  models.py
core_django/models/management/commands/: init_crop_yield.py  init_weather_data.py  init_yearly_stats.py
core_django/models/migrations/: 0001_initial.py  0002_add_checksum_models.py  0002_implement_yearly_stats_and_crop_yield.py
core_django/utils/: __init__.py  async_bulk_writer.py  units.py
docker/: Dockerfile.analytics  Dockerfile.api  Dockerfile.ingest  README.ingest.md  analytics-cron  batch-entrypoint.sh  docker-compose.ingest.yml  init-db.sql  nginx.conf  prometheus.yml
docker/analytics-scripts/: README.md  compute-previous-year-stats.sh  compute-yearly-stats.sh  data-maintenance.sh  export-metrics.sh  full-stats-recompute.sh  health-check.sh  rotate-logs.sh  update-db-stats.sh
scripts/: README.md  __init__.py  compute_yearly_stats.py  ingest_weather_data.py  test-container-builds.sh  test_api_integration.py  validate-ci-config.sh
src/: __init__.py  config.py  main.py
src/docs/: __init__.py  openapi_config.py  swagger_ui.py
src/middleware/: __init__.py  etag_middleware.py
src/models/: __init__.py  common.py  crops.py  query.py  simple_weather.py  weather.py
src/routers/: __init__.py  crops.py  docs.py  filtered_endpoints.py  health.py  simple_weather.py  stats.py  weather.py
src/utils/: __init__.py  caching.py  filtering.py  pagination.py  sorting.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: README.md  __init__.py  conftest.py  test_async_bulk_writer.py  test_base.py  test_date_filter_edge_cases.py  test_documentation_endpoints.py  test_enhanced_endpoints.py  test_error_scenarios.py  test_health_endpoints.py  test_weather_endpoints.py
tests/scripts/: __init__.py  test_checksum_functionality.py  test_weather_parser.py  test_weather_parser_integration.py  test_yearly_stats.py
